--- a/src/register/components/organisation-type/organisation-type.component.html
+++ b/src/register/components/organisation-type/organisation-type.component.html
@@ -19,50 +19,59 @@
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio"
-                    id="solicitor-organisation" name="organisationType" value="solicitorOrganisation">
+                    id="solicitor-organisation" name="organisationType" value="solicitorOrganisation" formControlName="organisationType">
                   <label class="govuk-label govuk-radios__label" for="solicitor-organisation">
                     Solicitor organisation
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio"
-                    id="probate-practitioner" name="organisationType" value="probatePractitioner">
+                    id="probate-practitioner" name="organisationType" value="probatePractitioner" formControlName="organisationType">
                   <label class="govuk-label govuk-radios__label" for="probate-practitioner">
                     Probate practitioner or chartered surveyor
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio"
-                    id="local-authority" name="organisationType" value="localAuthority">
+                    id="local-authority" name="organisationType" value="localAuthority" formControlName="organisationType">
                   <label class="govuk-label govuk-radios__label" for="local-authority">
                     Local authority
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio"
-                    id="government-department" name="organisationType" value="governmentDepartment">
+                    id="government-department" name="organisationType" value="governmentDepartment" formControlName="organisationType">
                   <label class="govuk-label govuk-radios__label" for="government-department">
                     Government department (TBC)
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio"
-                    id="other" name="organisationType" value="other" data-aria-controls="other-organisation-type-container">
+                    id="other" name="organisationType" value="other" data-aria-controls="other-organisation-type-container" formControlName="organisationType">
                   <label class="govuk-label govuk-radios__label" for="other">
                     Other
                   </label>
                 </div>
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="other-organisation-type-container">
                   <div class="govuk-form-group">
-                    <label class="govuk-label" for="other-organisation-type">
-                      Select another type of organisation
-                    </label>
-                    <select class="govuk-select" id="other-organisation-type" name="otherOrganisationType">
-                      <option value="published">Recently published</option>
-                      <option value="updated" selected>Recently updated</option>
-                      <option value="views">Most views</option>
-                      <option value="comments">Most comments</option>
-                    </select>
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="other-organisation-type">
+                        Select another type of organisation
+                      </label>
+                      <select class="govuk-select" id="other-organisation-type" name="otherOrganisationType" formControlName="otherOrganisationType">
+                        <option value="published">Recently published</option>
+                        <option value="updated" selected>Recently updated</option>
+                        <option value="views">Most views</option>
+                        <option value="comments">Most comments</option>
+                      </select>
+                    </div>
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="other-organisation-detail">
+                        Enter details
+                      </label>
+                      <input class="govuk-input" type="text"
+                        id="other-organisation-detail" name="otherOrganisationDetail" formControlName="otherOrganisationDetail">
+                    </div>
                   </div>
                 </div>
               </div>
